[package]
name = "estb_phase_lis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.1"
termios = "0.2.2"
ioctl-rs = "0.1.5"
serialport = "4.2.2"  # Add the version of the serialport crate here
clap = { version = "3.1.6", features = ["derive"] }